src/objects/CommDefine__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>A1CookingReport__c</fullName>
        <defaultValue>&quot;#02$6002 A1_料理関連[今月]&quot;</defaultValue>
        <label>レポート_A1_料理関連[今月]</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGTReferToParentFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ネットからのリアルAGTの予約かどうかの識別用フラグ
TRUE：ご予約に紐付く旅行会社情報の親取引先　かつ　該当親取引先分類がリアルの場合、リアルAGTを判定する
FALSE：ご予約に紐付く旅行会社情報を判断する（デフォルト値）
注：共通定義「予約ポップのリアルＡＧＴ残室数連動フラグ」項目が０を設定前提</inlineHelpText>
        <label>リアルAGTの予約識別フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccReportStampIsShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計書にハンコ表示・非表示
TRUE:ハンコ表示
FALSE:ハンコ非表示(デフォルト値）</inlineHelpText>
        <label>会計書ハンコ表示・非表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccounntStayPersonsAutoSetupFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計画面の予約人數は０人のとき、自動男性、女性、子供人數から集計値を自動設定する、しない制御
TRUE:自動集計設定する
FALSE：自動集計設定しない（デフォルト値）</inlineHelpText>
        <label>会計人數自動集計機能制御フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountAcountCutoffDay__c</fullName>
        <inlineHelpText>会計機能、日付が変わった後、会計データにロックがかかり変更出来ない機能パラメータ値の設定
書式：X:Y;Z
X:Y→該当会計の売上日からX月後のY日以後、該当会計をロックされる
Z:会計ロック後、会計書、請求書発行可否のフラグ( 0/空欄、1、2)
　0/空欄：　会計ロック後、会計書、請求書発行不可
　1:カスタムメタデータ型→会計ロック除外者設定に指定ユーザは発行可能
　2:誰でも発行可能
設定例：1月後の20日以後会計ロックする、会計ロック除外者のみ会計書発行可能
1:20;1</inlineHelpText>
        <label>会計ロック機能パラメータ設定</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountBathTaxAutoSetupFlg2__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>入湯税自動作成方法切り替え用フラグ
1/空欄：共有定義「入湯税自動入力フラグ」設定により、入湯税自動入力（デフォルト値）
2：プランに紐付く入湯税設定により、見積明細、会計明細にプラン登録に従って、入湯税明細を自動入力する</inlineHelpText>
        <label>入湯税自動入力フラグ2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountBathTaxAutoSetupFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計開く際に、人数と泊数により明細に入湯税明細を自動入力する・しないフラグ
注１：会計明細に入湯税明細ある場合、自動設定しない
注２：共通定義：「入湯税商品コード」を事前設定済み　かつ　該当会計商品が存在
TRUE：会計開く際に、人数と泊数により明細に入湯税明細を自動入力する
FALSE：自動入力しない（デフォルト値）</inlineHelpText>
        <label>入湯税自動入力フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountBathTaxCode__c</fullName>
        <description>2019.05.15店舗別「入湯税」の商品コードを指定できるように改善対応</description>
        <inlineHelpText>会計商品「入湯税」の商品コード（共通定義：入湯税自動入力フラグ機能有効の前提）
書式１：全施設の入湯税商品コードが同じにする
          入湯税商品コード
書式２：店舗別入湯税商品コードを定義する
          店舗コード1：入湯税商品コード1;店舗コード2：入湯税商品コード2
例：01:9001;02:9002</inlineHelpText>
        <label>入湯税商品コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountDetailSortCode__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>会計明細プラン商品を明細のトップかまたは入力順表示かの制御区分
会計明細プラン商品を明細の入力順に表示を行う（デフォルト値）
会計明細プラン商品を明細のトップに表示を行う</inlineHelpText>
        <label>会計明細の並び替え機能コード</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountDetailSortDiv__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>会計書会計明細表示順設定機能制御区分
1: 会計編集画面、「並び替え」項目で、表示明細制御（Defautl値）
2: 会計編集画面、ドロップで会計明細の順番を調整する</inlineHelpText>
        <label>未使用</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountEditAuthCheckFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>別店舗の予約や会計しか変更できないように権限管理
TRUE:別店舗の予約や会計しか変更できない
FALSE:別店舗の予約や会計しか変更できる(デフォルト)</inlineHelpText>
        <label>店舗ごとの予約・会計権限</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountInversionLine__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>明細の反転をする／しないの設定ができる</inlineHelpText>
        <label>会計書反転明細</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountIsPlanEditFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計画面でプランの内訳を編集出来可否切り替えフラグ
TRUE:編集可能
FALSE:編集不可(デフォルト値)</inlineHelpText>
        <label>会計画面でプランの内訳を編集可否フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountIsShowCopy__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>会計書PDFの(控)を出力する制御
True:会計書PDFの(控)のページを表示 （Default値)
False:会計書PDFの(控)のページを非表示</inlineHelpText>
        <label>会計書(控)表示・非表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountIsShowInCommentFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計画面、社内連絡用コメント項目表示する・しない切替フラグ
TRUE:項目表示
FALSE:項目非表示（デフォルト）</inlineHelpText>
        <label>会計画面の社内用コメント表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountMediaIsShow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計書明細にメディア情報表示／非表示制御フラグ
True:  明細にメディア情報表示する
False: 明細にメディア情報非表示する （Default値）</inlineHelpText>
        <label>会計書の支払メディア明細表示・非表示制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountMoneyManasFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>売り掛け分の金額を領収書金額からマイナスする・しない制御フラグ
TRUE：マイナスする
FALSE：マイナスしない（デフォルト値）</description>
        <label>売り掛け分の金額を領収書金額からマイナス計算フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountNoSetAmountWhenNoShowMode__c</fullName>
        <inlineHelpText>会計画面の明細が「非表示」を設定するとき、明細の合計金額(税込)の設定区分
・空白、1の場合、共通定義「会計の非表示の合計金額設定不要」設定値有効
・2の場合、該当会計明細金額が変更なし、該当明細の合計金額は「ご利用金額(税込)、ご請求金額(税込)」に反映しない</inlineHelpText>
        <label>会計の非表示の合計金額設定不要２</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNoSetAmountWhenNoShow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計画面の明細が「非表示」を設定するとき、明細の合計金額(税込)の設定区分
TRUE:明細が非表示を設定するとき、「合計金額(税込)」の金額は「0」円に保存する
FALSE:明細が非表示を設定するとき、「合計金額(税込)」の金額はそのまま保存する（デフォルト値）</inlineHelpText>
        <label>会計の非表示の合計金額設定不要</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountNoTaxCalFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>FALSE：金額差異あり
TRUE：金額差異なし（デフォルト値）</inlineHelpText>
        <label>会計の金額差異制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountOldManModeFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>該当フラグはTRUEの場合、会計書PDF項目：お名前(GuestName)/ご請求金額/領収書の金額項目は普通により、大きくび表示を行う</inlineHelpText>
        <label>会計書文字サイズ大</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountPaidFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>新会計画面の「入金確認/入金日」項目は請求金額は０円の場合、自動チェック/設定するがどうか制御フラグ
TRUE:自動チェック/設定を行う
FALSE:自動チェック/設定なし（デフォルト値）</inlineHelpText>
        <label>会計の入金確認/入金日の自動チェック/設定制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountPaymentIsAutoGenFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>予約情報からチェックインから会計情報自動作成の場合、会計支払自動作成するがどうか制御を行う
TRUE： 会計支払情報を自動作成
FALSE：会計支払情報を自動作成しない（デフォルト値）</inlineHelpText>
        <label>会計の支払情報の自動作成制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountPdfBulkMergeFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>複数インデックスの会計を指定して、一括印刷可能機能有効・無効切替フラグ

TRUE:会計編集画面の印刷（会計書、請求先）ボタンを押下、該当機能画面へ遷移、複数インデックス会計を指定して、複数会計を一括印刷可能になる
FALSE:インデックス内のみ会計を表示、印刷可能（デフォルト値）</inlineHelpText>
        <label>会計書、請求書マージ機能フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountPopupIsShow__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>会計書、一括会計起動する場合、ポップアップウィンドウ表示・非表示制御
TRUE場合：ポップアップウィンドウ表示　(Default値)
FALSE場合：ポップアップウィンドウ非表示</inlineHelpText>
        <label>会計書ポップ表示・非表示制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountPrintNumsAndTitleDef__c</fullName>
        <inlineHelpText>書式：印刷総枚数,枚目:タイトル文言;枚目:タイトル文言
例：会計書は3枚印刷、1枚目のタイトル：会計書、2枚目のタイトル：会計書(ホテル控)、3枚目のタイトル：会計書(本社控え)
3,1:会計書;2:会計書(ホテル控);3:会計書(本社控え)
注：コード33／34／35／36のみ機能有効</inlineHelpText>
        <label>会計書の印刷枚数とタイトル定義</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountPrintRecipientTitleRule__c</fullName>
        <label>RFU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountPrintSpCdSaveFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>店舗を切り替えて会計書・請求書を出した際に、次の会計書・請求書を出す時に前回選択した店舗を表示・非表示フラグ
TRUE:前回選択した店舗を表示する
FALSE：デフォルト店舗を表示する(デフォルト値）</inlineHelpText>
        <label>店舗切替の保存フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountPrintType__c</fullName>
        <defaultValue>false</defaultValue>
        <description>会計書印刷Popup画面の「一括印刷」表示・非表示制御フラグ</description>
        <inlineHelpText>会計書印刷Popup画面の「一括印刷」表示・非表示制御フラグ(Default: FALSE)
TRUE:「一括印刷」印刷パラメータ設定項目表示
FALSE:「一括印刷」印刷パラメータ設定項目非表示</inlineHelpText>
        <label>会計書統合印刷表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountProdNmReturnFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計書で印刷した際に、長い商品名は折り返し表示切替フラグ
TRUE:商品名は折り返し表示
FALSE:商品名は固定長表示（デフォルト値）
2019/10/24から、該当機能は請求書、見積書も適応する</inlineHelpText>
        <label>会計書/請求書/見積書の商品名を折り返し表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountProviso__c</fullName>
        <defaultValue>&quot;宿泊代,飲食代,駐車場代&quot;</defaultValue>
        <inlineHelpText>会計書の領収書の「但し」選択リスト値
デフォルト但し内容を指定したい場合、後ろに、「:1」を指定すると、デフォルト但しを指定可能 
例：宿泊代,飲食代,駐車場代に対して、宿泊代はデフォルト値を指定したい場合、下記様に定義可能 
-&gt;宿泊代:1,飲食代,駐車場代</inlineHelpText>
        <label>領収書但し書き</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountReceiptDateDefValSetFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>新会計画面の「領収証日付」項目値は空白の場合、デフォルト値設定制御フラグ
TRUE:会計日時の日付で設定する（デフォルト値）
FALSE：売上日の日付で設定する</inlineHelpText>
        <label>会計の領収証日付値の自動設定制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountReceiptDateDefValSetMode__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <inlineHelpText>新会計画面の「領収証日付」項目値は空白の場合、デフォルト値設定制御フラグモード
新会計画面の「領収証日付」項目値は空白の場合、デフォルト値設定制御フラグ
0：共通定義「会計の領収証日付値の自動設定制御」設定により、日付初期値を設定する（デフォルト値）
1：到着日の日付で設定する
2：出発日の日付で設定する</inlineHelpText>
        <label>会計の領収証日付値の自動設定制御モード</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountReceiptDtAutoSetupFlg__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>会計画面に新規商品を追加する際、「利用日」をその会計の売上計上日が自動入力する・しない切り替え機能コード
1：本日の日付で設定する（デフォルト値）
2：会計の売上計上日で設定する</inlineHelpText>
        <label>会計利用日設定機能コード</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountRecipteIsShow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計ポップアップウィンドウに、会計書(施設コード３３，３４のみ)の領収書表示・非表示切替選択項目表示・非表示制御フラグ
TRUE：該当切替選択機能は会計ポップアップウィンドウに表示
FALSE該当切替選択機能は会計ポップアップウィンドウに非表示(デフォルト値）</inlineHelpText>
        <label>会計書の領収書表示・非表示切替選択機能</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountRenpakuBathTaxAutoSetupFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>入湯税自動入力の場合、自動入力した入湯税の作成方式フラグ
注１：共通定義：入湯税自動入力フラグ　がＯＮ または　入湯税自動入力フラグ2　が [2] 前提
注２：共通定義：「入湯税商品コード」を事前設定済み　かつ　該当会計商品が存在 
TRUE：自動入力の入湯税は日ごとに振り分ける
FALSE：自動入力の入湯税は1泊目に集める（デフォルト値）</inlineHelpText>
        <label>入湯税自動入力モード</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountReportBulkPrintMaxRooms__c</fullName>
        <defaultValue>75</defaultValue>
        <inlineHelpText>ビル一括印刷のとき、該当数字により、一つPDFファイルに含める部屋数を決める</inlineHelpText>
        <label>会計書ビル一括分割部屋数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountReportComment__c</fullName>
        <defaultValue>&quot;宿泊税等が加算される場合には別途記載をいたしております。&quot;</defaultValue>
        <inlineHelpText>会計書23、24は該当コメント文を使う</inlineHelpText>
        <label>会計書コメント文</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountReportFontColor__c</fullName>
        <defaultValue>&quot;gray&quot;</defaultValue>
        <inlineHelpText>会計書文字色制御設定用、設定内容はHTMLの色設定コード
例：黒色:black 赤色：red、青：blue、黄色:yellow、緑色:green
上記以外の色を設定したい場合、下記URLで参照してください
http://www.hi-ho.ne.jp/douton/htmlcolor.html
カスタム設定の「施設コード：８，９，１０，１１」設定する場合、会計書文字色設定は会計書に反映する</inlineHelpText>
        <label>会計書文字色</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountReportSortKbn__c</fullName>
        <defaultValue>&quot;2&quot;</defaultValue>
        <inlineHelpText>一括会計書（33/34/35/36）、一括請求書明細表示順定義
1:会計画面明細入力順
2:利用日順明細出力</inlineHelpText>
        <label>一括会計書、請求書明細表示順</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSaleDateSetupDiv__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>パラメータによりチェックイン日付またはチェックアウト日付で売上を自動作成
1:予約のチエックイン日（到着日）で売上計上する（Default値）
2:予約のチエックアウト日（出発日）で売上計上する</inlineHelpText>
        <label>会計の売上計上日設定区分</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountServiceChargeIsShow__c</fullName>
        <inlineHelpText>会計書(施設コード33/34) 、請求書、見積書にサービス料合計金額は利用明細に表示する・しない制御 
0/空欄：サービス料合計金額は明細行に追加表示しない（デフォルト値） 
1：サービス料合計金額は明細行に追加表示
2：サービス料合計金額は内税消費税行の下に表示</inlineHelpText>
        <label>サービス料別表示制御</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountServiceChargeNoTaxFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>「サービス料別表示制御」は「2」で定義されている場合、該当フラグ定義により、サビース料税込み・税抜き切替できる
TRUE：サービス料は税抜き金額を出力する
FALSE:サービス料は税込みき金額を出力する(デフォルト値)</inlineHelpText>
        <label>サービス料税抜表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountSetTotalPosition__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>会計書の合計金額と領収書表示箇所の制御コード
1:各枚目に表示（デフォルト値）
2:最終枚目のみ表示
3:1枚目のみ表示</inlineHelpText>
        <label>会計書合計と領収書表示箇所コード</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountShowRoomColFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>複数部屋の一括会計の際に、会計書の明細にそれぞれの部屋名が表記する・しないフラグ（会計書33、34のみ）
TRUE:表記する
FALSE:表記しない（デフォルト値）</inlineHelpText>
        <label>会計書明細に部屋名を表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountSignatureFieldIsShow__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>会計書（施設コード３３，３４のみ）の署名項目表示・非表示制御フラグ
TRUE場合： 署名項目を表示する　(デフォルト値)
FALSE場合：署名項目を表示する非表示</inlineHelpText>
        <label>会計書の署名表示・非表示制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountSoftSyncCsvType__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>会計連携用CSV出力種別：
PCA：1(デフォルト値)
Freee:2</inlineHelpText>
        <label>会計連携用CSV出力種別</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSplitFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計明細分割画面のプランのBreakdown明細表示・非表示制御
TRUE：プラン明細は画面に表示する
FALSE:プラン明細は画面に非表示する (Default値）</inlineHelpText>
        <label>会計分割明細のBreakDown明細表示・非表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountSplitLineFixFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計書（33/34)の領収書の点線の位置が常に固定箇所を出力する・しない切り替えフラグ
TRUE:常に固定位置を出力する
FALSE:明細により、位置を自動調整を行う(デフォルト値）</inlineHelpText>
        <label>会計書の領収書点線の位置固定フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountSplitOutputFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>明細分割内容出力モードフラグ(会計と見積に対応)
TRUE:分割内容は１ファイルに複数ページで出力する
FALSE:分割内容は別々ファイルに出力する（デフォルト値）</inlineHelpText>
        <label>会計/見積明細分割内容出力フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountStampIsShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>スタンプなし：アイコンと施設情報は表示あり
スタンプあり：アイコンと施設情報は表示しない</inlineHelpText>
        <label>会計書スタンプ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountSyncCommentFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>連泊の会計に対して、別泊に入力したコメント情報は共有参照可、不可フラグ
TRUE:共有する
FALSE:共有しない</inlineHelpText>
        <label>会計コメントの共有フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountUseDateMode__c</fullName>
        <defaultValue>&quot;3&quot;</defaultValue>
        <inlineHelpText>利用日のモード: 
1:利用日は到着日と紐付く (デフォルト値)
2:利用日は到着日と紐付くない
3:利用日中間モード（会計明細は到着日と紐付く、会計支払は到着日と紐付くない）</inlineHelpText>
        <label>利用日モード</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountsPrintFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計画面の「印刷」→「会計書作成」ボタンをクリック後、会計書PDF/レシート印刷 切替選択できるフラグ 
TRUE:会計書PDF/レシート印刷 切替選択できる 
FALSE:会計書PDFウインドウを開く（デフォル値）</inlineHelpText>
        <label>会計の印刷</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActivityRefAccountReportId__c</fullName>
        <inlineHelpText>活動から複数取込先を選択するとき、選択した取込先参照用レポートのID値を格納する</inlineHelpText>
        <label>活動関連取引先レポートID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdvancesReceivedChk__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>ネットから自動取込機能（ねっぱん）の部屋自動アサイン制御フラグ：「Ver4.52から」
ネットから自動取込機能（手間いらず、リンカーン、らく通)該当制御フラグも有効「Ver15.53から」
パラメータ値が
　TRUEにのときは、部屋タイプに対して、１部屋のみ含め場合、
　　　　　該当部屋は予約に自動アサインする　（デフォルト値は、TRUEとする）
　FALSEのときは、実行しない、</inlineHelpText>
        <label>部屋自動割当フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AmountSumKeyBath1__c</fullName>
        <inlineHelpText>「売上更新」→「経理」→「入湯税の人数」「入湯税の金額」関連統計処理使用、会計明細の「リンクＤＰコード」名と定義したキーワードに含めする場合、該当会計明細は統計対象になる 
定義書式：「キーワード１,キーワード２,キーワード３ etc.」 
定義例：入湯1,入湯2,入湯3</inlineHelpText>
        <label>売上_入湯(RollUP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmountSumKeyBath2__c</fullName>
        <inlineHelpText>「売上更新」→「経理」→「入浴人数」「入浴料」「入浴料(税込)」関連統計処理使用、会計明細の「リンクＤＰコード」名と定義したキーワードに含めする場合、該当会計明細は統計対象になる 
定義書式：「キーワード１,キーワード２,キーワード３ etc.」 
定義例：入浴1,入浴2,入浴3</inlineHelpText>
        <label>売上_入浴(RollUP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmountSumKeyNightStay__c</fullName>
        <inlineHelpText>「売上更新」→「客室稼働率と平均単価」→「客室-[夕]稼働率」関連統計処理使用、会計明細の「リンクＤＰコード」名と定義したキーワードに含めする場合、該当会計明細は統計対象になる
定義書式：「キーワード１,キーワード２,キーワード３ etc.」
定義例：夕客室1,夕客室2,夕客室3</inlineHelpText>
        <label>売上_夕客室(RollUP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmountSumKeyNoonStay__c</fullName>
        <description>昼客室</description>
        <inlineHelpText>「売上更新」→「客室稼働率と平均単価」→「客室-[昼]稼働率」関連統計処理使用、会計明細の「リンクＤＰコード」名と定義したキーワードに含めする場合、該当会計明細は統計対象になる 
定義書式：「キーワード１,キーワード２,キーワード３ etc.」 
定義例：昼客室1,昼客室2,昼客室3</inlineHelpText>
        <label>売上_昼客室(RollUP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmountSumKeyStay__c</fullName>
        <inlineHelpText>「売上更新」→「客室稼働率と平均単価」→「客室-稼働率」関連統計処理使用、会計明細の「リンクＤＰコード」名と定義したキーワードに含めする場合、該当会計明細は統計対象になる
定義書式：「キーワード１,キーワード２,キーワード３ etc.」
定義例：宿泊1,宿泊2,宿泊3</inlineHelpText>
        <label>売上_宿泊(RollUP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppNS__c</fullName>
        <defaultValue>&quot;ps__&quot;</defaultValue>
        <description>Packageネームスペース</description>
        <inlineHelpText>NameSpace(名前空間名)</inlineHelpText>
        <label>AppNS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationFormPDFSwitchCode__c</fullName>
        <defaultValue>&quot;2&quot;</defaultValue>
        <inlineHelpText>予約確認書表示レイアウト制御
1: 予約確認書（旧)（B５）
2: 予約確認書（新)（A４）(デフォルト)
4: 入寮確認書 (A4)
5: 錦水館専用 (A4)
6: カスタム用</inlineHelpText>
        <label>予約確認書コード</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationFormReportPopupIsShow__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>ご予約、宿帳詳細画面から起動する場合、ポップアップウィンドウ表示・非表示制御
TRUE場合：ポップアップウィンドウ表示　(Default値)
FALSE場合：ポップアップウィンドウ非表示</inlineHelpText>
        <label>予約確認書ポップ表示・非表示制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicationFormShopLogoFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>予約確認書のロゴ取得元を切り替え用フラグ
TRUE:予約の部屋タイプに紐づいた店舗ロゴを表示する
FALSE:ログイン中のユーザの店舗のロゴを表示する（デフォルト値）</inlineHelpText>
        <label>予約確認書のロゴ取得元</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicationFormTimeFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ご予約が日帰り場合、予約確認書に到着時刻、出発時刻を出力する・しないフラグ 
TRUE:到着時刻、出発時刻を出力しない 
FALSE:到着時刻、出発時刻を出力する（デフォルト値）</inlineHelpText>
        <label>予約確認書の日帰り到着出発時刻非表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoAlarmFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>項目値変更により、変更内容を自動的にChatterへポストする・しないフラグ（設定ファイル「オブジェクト変更チェツク用設定情報」設定済み前提）
TRUE:該当機能有効
FALSE:該当機能無効（デフォルト値）</inlineHelpText>
        <label>項目変更自動ポストフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoCancelBadRoom__c</fullName>
        <inlineHelpText>故障部屋自動解除機能、どの部屋タイプは故障開始日の何日前から自動解除パラメータを設定する
    書式：部屋タイプ「Seq#」:X日前から解除日数,部屋タイプ「Seq#」:X日前から解除日数
　　例：部屋タイプ（SEQが346，347）の部屋の故障開始日が1日前から自動解除
　　　　 部屋タイプ（SEQが345）の部屋の故障開始日が2日前から自動解除
     設定例：346:1,347:1,345:2</inlineHelpText>
        <label>RFU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoCreateBookingEstFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ご予約内にある「プラン」という項目を入力する、このプランが予約見積明細に登録する、しない切り替えフラグ
TRUE:プランが見積明細へ反映されない
FALSE：プランが見積明細へ反映する（デフォルト値）</inlineHelpText>
        <label>ご予約のプランが見積明細に反映する・しないフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BE_NoShowRequestFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>未使用</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BatchNroomsCheckInFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>バッチ処理（予約の自動チェックイン）機能：
TRUEの場合、１泊数N部屋の予約データも自動チェックイン更新対象
FALSEの場合、N泊数の予約データのみ自動チェックイン更新対象</inlineHelpText>
        <label>自動チェックイン対象区分</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillEraseFilterFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>入金消込画面、データフィルターモード切替フラグ
TRUE：チェックボックス方式で複数条件を指定可能
FALSE：条件内容を自由入力、２条件まで指定可能</inlineHelpText>
        <label>入金消込のフィルター切替フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillEraseMediaTypeCode__c</fullName>
        <defaultValue>&quot;02,03,11&quot;</defaultValue>
        <inlineHelpText>入金消込機能、消込できる支払メデイア種別コードを定義する、カンマで複数定義可能
02：カード
03：売掛
11：クーポン</inlineHelpText>
        <label>入金消込対象支払種別コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillInputSwitchCode__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <description>会計編集画面レイアウト切替制御パラメータ</description>
        <inlineHelpText>会計編集画面レイアウト切替制御パラメータ
1: 元会計編集画面（デフォルト値） 
2: 新会計メニュー</inlineHelpText>
        <label>会計編集のレイアウト制御コード</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillIsShowCopy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>請求書PDFの(控)を出力する制御
True:請求書PDFの(控)のページを表示
False:請求書PDFの(控)のページを非表示 （デフォルト値)</inlineHelpText>
        <label>請求書(控)表示・非表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillLetterIsShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>請求書の送付状出力・出力しない切替選択機能フラグ 
TRUE：該当切替選択機能は請求書出力ポップアップロードウインドウに表示
FALSE該当切替選択機能は請求書出力ポップアップロードウインドウに非表示(デフォルト値）</inlineHelpText>
        <label>請求書の送付状出力・出力しない切替選択機能フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillPdfFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>見積から請求書を出力場合、N部屋、N泊目の請求書を１枚に印刷されるフラグ
TRUE:N部屋、N泊目の請求書を１枚に印刷される
FALSE:1部屋、N泊目の請求書を１枚に印刷される(デフォルト値)</inlineHelpText>
        <label>請求書一括印刷フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillReportCommentAutoBreakFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>請求書、見積書、予約確認書コメント文字列の自動改行制御フラグ
TRUE:画面入力の改行を無視して、入力行の文字数により、自動改行を行う
FALSE:画面入力の改行により、その文字はそのまま請求書、見積書、予約確認書に表示する（デフォルト値）</inlineHelpText>
        <label>請求書、見積書、予約確認書コメント自動改行制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillReportReceiptIsShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>請求書&amp;領収書レイアウト有効フラグ
TRUE:請求書レイアウトに領収書情報は下部に表示を行う
FALSE：領収書情報を非表示、請求書情報のみ表示しております（デフォルト値）</inlineHelpText>
        <label>請求書＆領収書レイアウト有効フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillReportStampIsShowFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>請求書にハンコ表示・非表示
TRUE：ハンコ表示(Default値）
FALSE:ハンコ非表示</inlineHelpText>
        <label>請求書ハンコ表示・非表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BookEstUseDateSetupFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>共通定義：「会計の売上計上日設定区分」が「2」場合でも、利用日が常に到着日で表示のフラグ
TRUE: 機能有効
FALSE: 機能無効（デフォルト値）</inlineHelpText>
        <label>利用日が常に到着日で設定フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BookingApiFieldsShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>プラン編集画面英語項目表示する・しないフラグ
TRUE:プラン編集画面、英語項目「Plan（英）、食事内容（英）」を表示する
FALSE:プラン編集画面、英語項目「Plan（英）、食事内容（英）」を表示しない（デフォルト値）</inlineHelpText>
        <label>プラン編集に英語項目表示・非表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BookingAppIsShowComment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>一括予約画面の基本情報に「特記事項」項目表示・非表示制御する
TRUE：　一括予約画面に「特記事項」項目表示
FALSE： 一括予約画面に「特記事項」項目非表示(Default値)</inlineHelpText>
        <label>一括予約の特記事項表示・非表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BookingAppSwitchCode__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <description>一括予約画面入力項目切替制御パラメータ</description>
        <inlineHelpText>1: 会社名（団体名）、申込者、客室情報入力項目あり画面
2: 予約ポップ画面と統一する、項目：ひらがな、カナ１、注意事項入力項目あり画面
3: 一画面レイアウト
4. 一画面レイアウト、明細行を1行1部屋形式
初期値：１</inlineHelpText>
        <label>一括予約基本情報のレイアウトNo.</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BookingChildrenDef__c</fullName>
        <defaultValue>0</defaultValue>
        <description>関連影響：
標準ご予約画面の項目（小人A）デフォルト値
タイムテーブルの予約ポップ画面の会計人数
予約ポップの予約ポップ画面の会計人数
会計画面、会計人数未入力場合の自動設定する会計人数</description>
        <inlineHelpText>予約標準画面：項目（小人A）デフォルト値</inlineHelpText>
        <label>予約人数(子供)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BookingCurves__c</fullName>
        <defaultValue>&apos;2:|0|5|10|15|20|1:|0|5|10|15|20&apos;</defaultValue>
        <description>売上画面：Booking Curves施設コードの定義(例：2:|0|5|10|15|20|1:|0|5|10|15|20)</description>
        <inlineHelpText>Google Chart API Argument</inlineHelpText>
        <label>BookingCurves引数</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BookingFemailsDef__c</fullName>
        <defaultValue>0</defaultValue>
        <description>関連影響： 
標準ご予約画面の項目（女性）デフォルト値 
タイムテーブルの予約ポップ画面の会計人数 
予約ポップの予約ポップ画面の会計人数 
会計画面、会計人数未入力場合の自動設定する会計人数</description>
        <inlineHelpText>標準ご予約画面の項目（女性）デフォルト値</inlineHelpText>
        <label>予約人数(女性)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BookingFlexShopsFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>一括予約、画面上で部屋タイプを選ぶ際、ユーザは複数店舗に所属している場合、所属店舗全ての部屋タイプが表示フラグ
TRUE：所属店舗全ての部屋タイプが表示される
FALSE：デフォルト所属店舗の部屋タイプのみ表示される（デフォルト値）</inlineHelpText>
        <label>一括予約の複数店舗の部屋タイプ表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BookingMansDef__c</fullName>
        <defaultValue>1</defaultValue>
        <description>関連影響： 
標準ご予約画面の項目（男性）デフォルト値 
タイムテーブルの予約ポップ画面の会計人数 
予約ポップの予約ポップ画面の会計人数 
会計画面、会計人数未入力場合の自動設定する会計人数(APEX)</description>
        <inlineHelpText>標準ご予約画面の項目（男性）デフォルト値</inlineHelpText>
        <label>予約人数(男性)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BookingReceiptDateDefaultInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>見積書の印刷ボタンを押したタイミング、発行日付が常に今日日付でデフォルト値として見積書を発行する機能有効フラグ
TRUE:該当機能有効
FALSE:該当機能無効（デフォルト値）</inlineHelpText>
        <label>見積の発行日付のデフォルト値を制御フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BookingReportLayoutCode__c</fullName>
        <inlineHelpText>0/空欄:金額合計は右下に表示する（デフォルト値）　
1:金額合計は左上に表示する（請求書と同じフォーマット）</inlineHelpText>
        <label>見積書レイアウト表示コード</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BookingReportStampIsShowFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>見積書にハンコ表示・非表示
TRUE:ハンコ表示(Default値）
FALSE:ハンコ非表示</inlineHelpText>
        <label>見積書ハンコ表示・非表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTICarAPIName__c</fullName>
        <inlineHelpText>該当API定義により、CTIから引き渡すの車ナンバー情報は自動的にお客様新規画面に設定する</inlineHelpText>
        <label>CTI車ナンバー</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTI_Call_Columns_xml_Name__c</fullName>
        <label>CTI Call Columns xml Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTI_CarNo_Speech__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>車ナンバーからお客様情報をヒントの場合、「XX様到着致しました」メッセージを放送する機能
TRUE:該当機能利用
FALSE：該当機能利用しない（デフォルト値）</inlineHelpText>
        <label>CTI_CarNo_Speech</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTI_type_window__c</fullName>
        <defaultValue>1</defaultValue>
        <label>CTI_type_window</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CalendarIsShowEnaki__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>こよみ画面、宴会場情報を画面に表示・非表示制御フラグ
TRUE: 画面に宴会場集計情報を表示する
FALSE:画面に宴会場集計情報を非表示する (Default値)</inlineHelpText>
        <label>こよみの宴会場情報表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseRollupBookRepNm__c</fullName>
        <defaultValue>&quot;現金合せ履歴&quot;</defaultValue>
        <inlineHelpText>現金合せ画面に「現金合せ履歴」ボタンから起動先のレポート名</inlineHelpText>
        <label>レポート_現金合せ履歴レポート名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CashRegNoCreateBlankRowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>宿帳登録画面、ご予約の合計人数により入力明細欄を自動作成する・しないフラグ
TRUE:入力欄作成不要
FALSE：入力欄作成する（デフォルト値）</inlineHelpText>
        <label>宿帳明細入力欄自動作成不要</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CashRegNullContactCanInsFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>宿帳登録画面、お客様名が空欄でも宿帳が自動作成する、しない切り替えフラグ
TRUE:登録を行う
FALSE：登録しない（デフォルト値）</inlineHelpText>
        <label>宿帳空欄でも明細作成フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CashRegSaveLeadCheckInFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>宿帳サイン後の「保存」押下すると、該当予約をチェックインにする機能
注：レジカードコード：4、5、7対応済
TRUE：該当予約をチェックインにする
FALSE：連動処理なし（デフォルト値）</inlineHelpText>
        <label>宿帳保存後自動チェックインフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CashRegisterAutoCreateFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>宿帳自動作成フラグ
TRUE:宿帳自動作成する（デフォルト値）
FALSE:宿帳自動作成しない</inlineHelpText>
        <label>宿帳自動作成フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CashRegisterBulkFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>宿帳一括印刷の際に、１ページに２室宿帳情報を印刷する・しない切替フラグ
TRUE:１ページ２室宿帳情報を印刷する
FALSE:１ページ１室宿帳情報を印刷する（デフォルト値）
前提条件：サイン機能が無効　かつ　レジカードコードが７のみ該当機能を利用ください</inlineHelpText>
        <label>ページ毎に２室レジカード出力フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CashRegisterLogo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>レジカードPDF出力の際に、店舗情報を選択可否フラグ
TRUE：店舗選択可能、選択店舗により、該当店舗のロゴをPDFに出力する
FALSE:　店舗選択不要、ユーザ所属店舗のログをPDFに出力する（デフォルト値）</inlineHelpText>
        <label>レジカードのロゴフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CashRegisterSignType__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>サイン機能の利用タイプを定義する
1：別ウインドウにサインする（デフォルト値）
2：レジカード画面の署名欄に直接サインする
3：レジカード画面に直接サインできる</inlineHelpText>
        <label>レジカードサインタイプ</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CashRegisterSign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ルームインジケータ画面（詳細情報ウインドウのレジカードボタン）、宿帳画面（署名リンク）から、レジカード（レジカードコード：４のみ）画面を起動する場合、サイン用画面を起動するがどうか判断用フラグ
TRUE：署名用レジカードを起動する
FALSE:署名用レジカードを起動しない、直接レジカードPDFを表示する（デフォルト値）</inlineHelpText>
        <label>レジカードサインフラグ</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>